HSL color sliders acting funky #39627

Closed
opened 2014-04-06 23:15:59 +02:00 by Timo Takala · 10 comments

System Information
Mac OS X Lion 10.7.5

Blender Version
Broken: buildbot 2014-04-06 43fb105
Worked: ?

Short description of error
HSL color sliders work fine when you first add a color. But when you try to change the color, it shifts abruptly.

Exact steps for others to reproduce the error

  1. Open new blend file.
  2. Change Color Picker Type to HSL in User Preferences - System.
  3. Change some color value, for example Material diffuse color.
  4. Change that same color value again. Notice how the color jumps as soon as the slider moves a little bit.

Something else to try:

  1. Change the HSL color value to something easy to remember, for example: HSL: 0.5, 0.5, 0.5.
  2. Confirm.
  3. Go back to the same color. The color has changed to HSL: 0.5, 0.667, 0.75.

My guess is that Blender converts the HSL to HSV, then replaces the color numbers in the color picker with converted values. When user opens the same color picker again, numbers have changed, but the color is unchanged. When one of the sliders is moved Blender refreshes the color with these new numbers, thus causing the abrupt change of color.

One more thing to try:

  1. As previously, change the color to HSL: 0.5, 0.5, 0.5.
  2. Change Color Picker Type back to HSV in User Pref.
  3. Go back to the same color. The color values have again changed to HSL: 0.5, 0.667, 0.75.
  4. Move one of the sliders. Color changes as it should.
**System Information** Mac OS X Lion 10.7.5 **Blender Version** Broken: buildbot 2014-04-06 43fb105 Worked: ? **Short description of error** HSL color sliders work fine when you first add a color. But when you try to change the color, it shifts abruptly. **Exact steps for others to reproduce the error** 1. Open new blend file. 2. Change Color Picker Type to HSL in User Preferences - System. 3. Change some color value, for example Material diffuse color. 4. Change that same color value again. Notice how the color jumps as soon as the slider moves a little bit. Something else to try: 1. Change the HSL color value to something easy to remember, for example: HSL: 0.5, 0.5, 0.5. 2. Confirm. 3. Go back to the same color. The color has changed to HSL: 0.5, 0.667, 0.75. My guess is that Blender converts the HSL to HSV, then replaces the color *numbers* in the color picker with converted values. When user opens the same color picker again, numbers have changed, but the color is unchanged. When one of the sliders is moved Blender refreshes the color with these new numbers, thus causing the abrupt change of color. One more thing to try: 1. As previously, change the color to HSL: 0.5, 0.5, 0.5. 2. Change Color Picker Type back to HSV in User Pref. 3. Go back to the same color. The color values have again changed to HSL: 0.5, 0.667, 0.75. 4. Move one of the sliders. Color changes as it should.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Timo-1

Added subscriber: @Timo-1

Added subscriber: @mont29

Added subscriber: @mont29
Antonis Ryakiotakis was assigned by Bastien Montagne 2014-04-07 09:17:16 +02:00

Antony, think this is for you?

Antony, think this is for you?

This issue was referenced by blender/blender-addons-contrib@2d655d370d

This issue was referenced by blender/blender-addons-contrib@2d655d370d84d39e296e1744ac412a5968a5657d

This issue was referenced by 2d655d370d

This issue was referenced by 2d655d370d84d39e296e1744ac412a5968a5657d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 2d655d370d.

Closed by commit 2d655d370d.
Author

I compiled a fresh Blender. Now I got a slightly different behavior with the HSL sliders :)

If I change material diffuse color
0.5, 0.5, 0.5 becomes 0.5, 0.903, 0.523.

If I change some color in User Preferences
0.5, 0.5, 0.5 becomes 0.5, 0.665, 0.749.

Then again, it is very much possible that i messed something up with my build, so I'll try with a buildbot build tomorrow.

I compiled a fresh Blender. Now I got a slightly different behavior with the HSL sliders :) If I change material diffuse color 0.5, 0.5, 0.5 becomes 0.5, 0.903, 0.523. If I change some color in User Preferences 0.5, 0.5, 0.5 becomes 0.5, 0.665, 0.749. Then again, it is very much possible that i messed something up with my build, so I'll try with a buildbot build tomorrow.

No, you are right, pushed a fix for that right now, thanks!

No, you are right, pushed a fix for that right now, thanks!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39627
No description provided.